<resources>
    <string name="app_name">Task and Deadline</string>
    <string name="action_settings">Settings</string>
    <string name="task">Task</string>
    <string name="type_your_task_here">Type your task here …</string>
    <string name="deadline">Deadline</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="datepicker_button">DatePicker button</string>
    <string name="description">Description</string>
    <string name="type_task_s_descrition_here">Type task\'s descrition here …</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datePicker">datePicker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail">Task Detail</string>

    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="day_names">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
