<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="@id/description_task"
        app:layout_constraintTop_toBottomOf="@id/description_task" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/description_task"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/description_task" />

    <EditText
        android:id="@+id/description_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_task_s_descrition_here"
        android:inputType="textMultiLine|textCapSentences"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/title_task"
        app:layout_constraintStart_toStartOf="@id/title_task"
        app:layout_constraintTop_toBottomOf="@id/description_label" />

    <EditText
        android:id="@+id/title_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:hint="@string/type_your_task_here"
        android:inputType="textCapWords"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/title_label"
        app:layout_constraintTop_toBottomOf="@id/title_label" />

    <EditText
        android:id="@+id/deadline_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/dd_mm_yyyy"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/picker_button"
        app:layout_constraintStart_toStartOf="@id/title_task"
        app:layout_constraintTop_toBottomOf="@id/deadline_label" />

    <ImageButton
        android:id="@+id/picker_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/datepicker_button"
        android:src="@drawable/ic_arrow_drop_down_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/deadline_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/deadline_task" />

    <TextView
        android:id="@+id/deadline_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/deadline"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/title_task"
        app:layout_constraintTop_toBottomOf="@id/title_task" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/task"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/deadline_label"
        app:layout_constraintTop_toBottomOf="@id/deadline_task" />

</androidx.constraintlayout.widget.ConstraintLayout>